--- a/index.html
+++ b/index.html
@@ -73,9 +73,19 @@
 				<section>
 					<section>
 						<img src="images/toilet.jpg"/>
+						<aside class="notes">
+							<ul>
+								<li>Hopefully, we'll be able to take you from being this guy, goofing around on the toilet....</li>
+							</ul>
+						</aside>
 					</section>
 					<section>
 						<img src="images/hacker.jpg"/>
+						<aside class="notes">
+							<ul>
+								<li>... to this guy, doing all kinds of cool stuff</li>
+							</ul>
+						</aside>
 					</section>
 				</section>
 
@@ -83,8 +93,15 @@
 					<section>
 						<h3>OWASP</h3>
 						<h5 class="fragment">Open Web Application Security Project</h5>
+						<aside class="notes">
+							<ul>
+								<li>Open community dedicated to enabling organizations to develop, purchase, and maintain applications and APIs that can be trusted</li>
+								<li>Basically people that want the web to be more secure</li>
+							</ul>
+						</aside>
 					</section>
 					<section>
+						<h3>OWASP Top Ten</h3>
 						<ul>
 							<li class="fragment">Injection</li>
 							<li class="fragment">Broken Authentication</li>
@@ -97,6 +114,12 @@
 							<li class="fragment">Using Components with Known Vulnerabilities</li>
 							<li class="fragment">Insufficient Logging & Monitoring</li>
 						</ul>
+						<aside class="notes">
+							<ul>
+								<li>Top ten security weaknesses</li>
+								<li>Based on data submissions that come from firms specializing in app sec</li>
+							</ul>
+						</aside>
 					</section>
 				</section>
 
@@ -119,7 +142,7 @@
 						<p class="fragment">And many more...</p>
 					</section>
 					<section>
-						<h3>What could I be doing wrong?</h3>
+						<h4>What could I be doing wrong?</h4>
 						<p class="fragment">Blindly accepting input</p>
 						<p class="fragment">Concatenation</p>
 					</section>
@@ -212,7 +235,7 @@
 						<p>Exactly what it sounds like...</p>
 					</section>
 					<section>
-						<h3>What could I be doing wrong?</h3>
+						<h4>What could I be doing wrong?</h4>
 						<p class="fragment">Allowing credential stuffing</p>
 						<p class="fragment">Allowing brute force</p>
 						<p class="fragment">Bad password restrictions & recovery</p>
@@ -278,7 +301,7 @@
 						Not encrypting the right stuff
 					</section>
 					<section>
-						<h3>What could I be doing wrong?!</h3>
+						<h4>What could I be doing wrong?</h4>
 						<p class="fragment">Sending data in plain text</p>
 						<p class="fragment">Weak key generation</p>
 						<p class="fragment">Weak storage techniques</p>
@@ -328,7 +351,7 @@
 						<p>Exploitation of vulnerable XML processors</p>
 					</section>
 					<section>
-						<h3>What could I be doing wrong?!!</h3>
+						<h4>What could I be doing wrong?</h4>
 						<p class="fragment">Accepting XML directly</p>
 						<p class="fragment">Not testing</p>
 					</section>
@@ -370,7 +393,7 @@
 						<p>Users being able to perform unauthorized actions</p>
 					</section>
 					<section>
-						<h3>What could I be doing wrong?!?!</h3>
+						<h4>What could I be doing wrong?</h4>
 						<p class="fragment">Lack of automated detection</p>
 						<p class="fragment">Not testing</p>
 					</section>
@@ -418,7 +441,7 @@
 						Attempt to gain unauthorized access or knowledge
 					</section>
 					<section>
-						<h3>What could be wrong????</h3>
+						<h4>What could I be doing wrong?</h4>
 						<p class="fragment">Leaving bugs unpatched</p>
 						<p class="fragment">Default accounts</p>
 						<p class="fragment">Unprotected files</p>
@@ -465,7 +488,7 @@
 						<p class="fragment">DOM</p>
 					</section>
 					<section>
-						<h3>What's going on!?</h3>
+						<h4>What could I be doing wrong?</h4>
 						<p class="fragment">Blindly accepting input again</p>
 					</section>
 					<section>
@@ -520,7 +543,7 @@
 						<p>Deserializing untrusted, potentially malicious objects</p>
 					</section>
 					<section>
-						<h3>What's the problem?!</h3>
+						<h4>What could I be doing wrong?</h4>
 						<p class="fragment">Deserializing anything and everything</p>
 					</section>
 					<section>
@@ -561,7 +584,7 @@
 						<img src="images\aspen.jpg"/>
 					</section>
 					<section>
-						<h3>What could I be doing wrong?!</h3>
+						<h4>What could I be doing wrong?</h4>
 					</section>
 					<section>
 						<h3>Impacts</h3>
@@ -591,7 +614,9 @@
 						<p>Failing to log important events</p>
 					</section>
 					<section>
-						<h3>What could I be doing wrong?!</h3>
+						<h4>What could I be doing wrong?</h4>
+						<p class="fragment">Not enough logging</p>
+						<p class="fragment">No logging at all!</p>
 					</section>
 					<section>
 						<h3>Impacts</h3>
@@ -616,6 +641,17 @@
 					</section>
 					<section>
 						<p>Log everything</p>
+					</section>
+				</section>
+
+				<section>
+					<h5>What have we learned?</h5>
+				</section>
+
+				<section>
+					<section>
+						<h5>Slides</h5>
+						<p>https://github.com/ty8356/DontGetHacked</p>
 					</section>
 				</section>
 
